@@ -2,6 +2,8 @@ package pixel
 
 import (
 	"encoding/json"
+	"fmt"
+	"io"
 	"log"
 	"log/syslog"
 	"net/http"
@@ -17,12 +19,18 @@ type Server struct {
 	now            func() time.Time
 }
 
+// Every pixel GET or JSON POST is an event.
 type Event struct {
-	Time      string            `json:"t"`
-	Params    map[string]string `json:"params"`
-	UserAgent string            `json:"ua,omitempty"`
-	IP        string            `json:"ip,omitempty"`
-	Proto     string            `json:"proto,omitempty"`
+	Time string `json:"t"`
+
+	// Params are client-supplied event attributes.
+	// Pixel events have params of form map[string]string.
+	// JSON POST events have arbitrary JSON.
+	Params interface{} `json:"params"`
+
+	UserAgent string `json:"ua,omitempty"`
+	IP        string `json:"ip,omitempty"`
+	Proto     string `json:"proto,omitempty"`
 }
 
 const ISO8601_FORMAT = "2006-01-02T15:04:05Z"
@@ -33,6 +41,8 @@ const TRANSPARENT_1_PX_GIF = "\x47\x49\x46\x38\x39\x61\x01\x00" +
 
 var BAD_REQUEST string
 var TRANSPARENT_1_PX_GIF_BYTES []byte
+
+const POST_BODY_MAX_LEN = 2048
 
 func init() {
 	TRANSPARENT_1_PX_GIF_BYTES = []byte(TRANSPARENT_1_PX_GIF)
@@ -127,44 +137,96 @@ func NewServer(syslogAddress string, syslogPriority syslog.Priority) (*Server, e
 	return s, err
 }
 
-func NewEvent(t time.Time, r *http.Request) (event *Event, err error) {
-	err = r.ParseForm()
-	if err != nil {
-		log.Printf("Malformed query string: %s", err)
-		return nil, err
+// Returns true if an interface is a flat mapping of strings to strings
+// or numbers.
+func isFlatJSON(i interface{}) bool {
+	m, ok := i.(map[string]interface{})
+	if !ok {
+		return false
 	}
-
-	event = &Event{
-		Time:   t.UTC().Format(ISO8601_FORMAT),
-		Params: make(map[string]string),
+	for _, v := range m {
+		switch v.(type) {
+		case string:
+		case int:
+		case float64:
+			continue
+		default:
+			return false
+		}
 	}
-
-	for key, values := range r.Form {
-		event.Params[key] = values[0]
-	}
-
-	event.UserAgent = r.Header.Get("User-Agent")
-	event.IP = r.Header.Get("X-Forwarded-For")
-	event.Proto = r.Header.Get("X-Forwarded-Proto")
-	return event, err
+	return true
 }
 
-func (s *Server) trackPixel(w http.ResponseWriter, r *http.Request) {
-	var event *Event
-	var err error
-	var jsondata []byte
+// Returns a new *Event. *http.Request can be either a pixel or a
+// JSON POST request.
+func NewEvent(t time.Time, r *http.Request) (event *Event, err error) {
+	event = &Event{
+		Time:      t.UTC().Format(ISO8601_FORMAT),
+		UserAgent: r.Header.Get("User-Agent"),
+		IP:        r.Header.Get("X-Forwarded-For"),
+		Proto:     r.Header.Get("X-Forwarded-Proto"),
+	}
 
+	switch r.Method {
+	case "GET":
+		err = r.ParseForm()
+		if err != nil {
+			err = fmt.Errorf("Malformed query string: %s", err)
+			break
+		}
+
+		params := make(map[string]string)
+		for key, values := range r.Form {
+			params[key] = values[0]
+		}
+		event.Params = params
+
+	case "POST":
+		var body []byte
+		var n int
+		if r.ContentLength > 0 {
+			if r.ContentLength > POST_BODY_MAX_LEN {
+				err = fmt.Errorf("POST body exceeds max length: %d",
+					r.ContentLength)
+				break
+			}
+			body = make([]byte, r.ContentLength)
+		} else if r.ContentLength == -1 {
+			body = make([]byte, POST_BODY_MAX_LEN)
+		} else {
+			err = fmt.Errorf("Empty POST body")
+			break
+		}
+
+		n, err = r.Body.Read(body)
+		if err != nil && err != io.EOF {
+			break
+		}
+
+		var params interface{}
+		event.Params = &params
+		err = json.Unmarshal(body[:n], event.Params)
+		if err != nil {
+			break
+		}
+
+	default:
+		err = fmt.Errorf("Invalid method %s", r.Method)
+	}
+	return
+}
+
+func (s *Server) parseRequest(w http.ResponseWriter, r *http.Request) (event *Event, err error) {
 	event, err = NewEvent(s.now(), r)
 	if err != nil {
 		log.Printf("%s", err)
 		http.Error(w, BAD_REQUEST, http.StatusBadRequest)
-		return
 	}
+	return event, err
+}
 
-	w.Header().Set("Content-Type", "image/gif")
-	w.Write(TRANSPARENT_1_PX_GIF_BYTES)
-
-	jsondata, err = json.Marshal(event)
+func (s *Server) logEvent(event *Event) {
+	jsondata, err := json.Marshal(event)
 	if err != nil {
 		log.Printf("json encode error: %s", err)
 	} else {
@@ -172,11 +234,34 @@ func (s *Server) trackPixel(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+func (s *Server) trackPixel(w http.ResponseWriter, r *http.Request) {
+	event, err := s.parseRequest(w, r)
+	if err != nil {
+		return
+	}
+	w.Header().Set("Content-Type", "image/gif")
+	w.Write(TRANSPARENT_1_PX_GIF_BYTES)
+	s.logEvent(event)
+}
+
+func (s *Server) trackJSON(w http.ResponseWriter, r *http.Request) {
+	event, err := s.parseRequest(w, r)
+	if err != nil {
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.Write([]byte("{}"))
+	s.logEvent(event)
+}
+
 func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	switch r.Method {
 	case "GET":
 		s.trackPixel(w, r)
 		return
+
+	case "POST":
+		s.trackJSON(w, r)
 
 	default:
 		http.Error(w, BAD_REQUEST, http.StatusBadRequest)
