@@ -2,12 +2,15 @@ package pixel
 
 import (
 	"encoding/json"
+	"io/ioutil"
 	"net"
 	"net/http"
 	"net/http/httptest"
 	"net/url"
 	"reflect"
 	"regexp"
+	"strconv"
+	"strings"
 	"testing"
 	"time"
 )
@@ -22,28 +25,34 @@ func init() {
 	STATIC_TIME = time.Date(2015, 3, 22, 4, 31, 44, 0, time.UTC)
 }
 
-func assertEqual(t *testing.T, expected, actual interface{}) {
+func assertEqual(t *testing.T, prefix string, expected, actual interface{}) {
 	if !reflect.DeepEqual(actual, expected) {
 		var expectedJSON, actualJSON []byte
 
 		expectedJSON, _ = json.MarshalIndent(expected, "", "    ")
 		actualJSON, _ = json.MarshalIndent(actual, "", "    ")
 
-		t.Errorf("Expected != actual\n\n%s\n\n%s", expectedJSON,
-			actualJSON)
+		t.Errorf("%s - expected != actual:\n\n%s\n!=\n%s",
+			prefix, expectedJSON, actualJSON)
 	}
 }
 
-func emptyEvent(t *testing.T) (timestamp time.Time, r *http.Request, e *Event) {
+func emptyEvent(t *testing.T, body string) (timestamp time.Time, r *http.Request, e *Event) {
 	var err error
-	r, err = http.NewRequest("GET", "http://localhost/393", nil)
+	if body == "" {
+		r, err = http.NewRequest("GET", "http://localhost/393", nil)
+	} else {
+		r, err = http.NewRequest("POST", "http://localhost/393",
+			ioutil.NopCloser(strings.NewReader(body)))
+		r.ContentLength = int64(len(body))
+	}
 	if err != nil {
 		t.Fatal(err)
 	}
 
 	e = &Event{
 		Time:   STATIC_ISO8601,
-		Params: map[string]string{},
+		Params: make(map[string]string),
 	}
 	return STATIC_TIME, r, e
 }
@@ -66,63 +75,103 @@ func newTestServer(t *testing.T, syslogAddress string) *Server {
 
 var eventTests = []struct {
 	headers map[string]string
-	params  map[string]string
 	IP      string
 	proto   string
+	params  map[string]string
+	body    string
 }{
+	// GET requests
 	{
 		map[string]string{},
+		"",
+		"",
 		map[string]string{},
-		"", "",
+		"",
 	},
 	{
 		map[string]string{
 			"X-Forwarded-For":   "169.254.169.254",
 			"X-Forwarded-Proto": "https",
 		},
-		map[string]string{},
 		"169.254.169.254",
 		"https",
+		map[string]string{},
+		"",
 	},
 	{
 		map[string]string{
 			"X-Forwarded-For":   "169.254.169.254",
 			"X-Forwarded-Proto": "https",
 		},
+		"169.254.169.254",
+		"https",
 		map[string]string{"k": "some_k", "foo": "gar"},
-		"169.254.169.254",
-		"https",
+		"",
+	},
+	// POST requests
+	{
+		map[string]string{},
+		"",
+		"",
+		nil,
+		`{"k": "some_k", "foo": "gar"}`,
 	},
 }
 
 func TestNewEvent(t *testing.T) {
 	var k, v string
 	var err error
-	for _, eventTest := range eventTests {
-		timestamp, r, expected := emptyEvent(t)
+	var r *http.Request
+	var timestamp time.Time
+	var expected *Event
+
+	check := func(prefix string) {
+		actual, err := NewEvent(timestamp, r)
+		if err != nil {
+			t.Fatalf("%s - %s", prefix, err)
+		}
+		assertEqual(t, prefix, expected, actual)
+	}
+
+	for index, eventTest := range eventTests {
+		timestamp, r, expected = emptyEvent(t, eventTest.body)
 		for k, v = range eventTest.headers {
 			r.Header.Set(k, v)
 		}
 		expected.IP = eventTest.IP
 		expected.Proto = eventTest.proto
 
-		params := url.Values{}
-		for k, v = range eventTest.params {
-			params.Set(k, v)
-			expected.Params[k] = v
-		}
-		r.URL, err = url.Parse("http://localhost/")
-		if err != nil {
-			t.Fatal(err)
-		}
-		r.URL.RawQuery = params.Encode()
+		if eventTest.body == "" {
+			eventParams := make(map[string]string)
+			urlParams := url.Values{}
+			for k, v = range eventTest.params {
+				urlParams.Set(k, v)
+				eventParams[k] = v
+			}
+			expected.Params = eventParams
 
-		actual, err := NewEvent(timestamp, r)
-		if err != nil {
-			t.Fatal(err)
+			r.URL, err = url.Parse("http://localhost/")
+			if err != nil {
+				t.Fatal(index, err)
+			}
+			r.URL.RawQuery = urlParams.Encode()
+			check(string(index))
+		} else {
+			var p interface{}
+			expected.Params = &p
+			err = json.Unmarshal([]byte(eventTest.body),
+				expected.Params)
+			if err != nil {
+				t.Fatal(index, err)
+			}
+			check(strconv.Itoa(index))
+
+			// Re-test the request with no content-length set.
+			r.Body = ioutil.NopCloser(strings.NewReader(eventTest.body))
+			r.ContentLength = -1
+			check(strconv.Itoa(index))
 		}
 
-		assertEqual(t, expected, actual)
 	}
 }
 
@@ -133,26 +182,43 @@ func TestNewEvent(t *testing.T) {
 var badRequest = http.StatusText(http.StatusBadRequest) + "\n"
 
 var httpTests = []struct {
-	method   string
-	path     string
-	rawQuery string
-	code     int
-	body     string
+	method       string
+	path         string
+	rawParams    string
+	code         int
+	responseBody string
 }{
+	// Valid requests
 	{"GET", "/", "", 200, TRANSPARENT_1_PX_GIF},
 	{"GET", "/", "a=1&b=2", 200, TRANSPARENT_1_PX_GIF},
+	{"POST", "/", `{}`, 200, "{}"},
+	{"POST", "/", `{"a": 1, "b": "2"}`, 200, "{}"},
+
+	// Invalid requests
 	{"GET", "/", "%gh&%ij", 400, badRequest},
 	{"POST", "/", "", 400, badRequest},
+	{"POST", "/", `{"a": 1 "b": "2"}`, 400, badRequest},
+	{"POST", "/",
+		`{"a": 1, "b": "paddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpaddingpadd"}`,
+		400, badRequest},
+	{"POST", "/", `{"a": 1, "b": {"a": 1}`, 400, badRequest},
 }
 
 func serveRequest(t *testing.T, server *Server, method, path,
-	rawQuery string) *httptest.ResponseRecorder {
+	rawParams string) *httptest.ResponseRecorder {
 	w := httptest.NewRecorder()
-	_, r, _ := emptyEvent(t)
-	r.Method = method
+	var r *http.Request
+	switch method {
+	case "GET":
+		_, r, _ = emptyEvent(t, "")
+		r.URL.RawQuery = rawParams
+	case "POST":
+		_, r, _ = emptyEvent(t, rawParams)
+		r.Method = "POST"
+	default:
+		t.Fatal("Not implemented!")
+	}
 	r.URL.Path = path
-	r.URL.RawQuery = rawQuery
-
 	server.ServeHTTP(w, r)
 	return w
 }
@@ -161,9 +227,9 @@ func TestServeHTTP(t *testing.T) {
 	server := newTestServer(t, "")
 	for _, httpTest := range httpTests {
 		w := serveRequest(t, server, httpTest.method, httpTest.path,
-			httpTest.rawQuery)
+			httpTest.rawParams)
 
-		expected := httpTest.body
+		expected := httpTest.responseBody
 		actual := w.Body.String()
 		if expected != actual {
 			t.Errorf("Expected body %q != actual %q", expected, actual)
@@ -190,15 +256,21 @@ func extractMessage(packet string) string {
 }
 
 var udpTests = []struct {
-	method   string
-	path     string
-	rawQuery string
-	packet   string
+	method    string
+	path      string
+	rawParams string
+	packet    string
 }{
+	// Valid requests
 	{
 		"GET", "/", "a=1&b=2",
 		`{"t":"` + STATIC_ISO8601 + `","params":{"a":"1","b":"2"}}`,
 	},
+	{
+		"POST", "/", `{"a": 1, "b": "2"}`,
+		`{"t":"` + STATIC_ISO8601 + `","params":{"a":1,"b":"2"}}`,
+	},
+	// Invalid requests
 	{
 		"GET", "/", "%gh&%ij", "",
 	},
@@ -231,7 +303,7 @@ func TestSendUdp(t *testing.T) {
 
 	for _, udpTest := range udpTests {
 		serveRequest(t, server, udpTest.method, udpTest.path,
-			udpTest.rawQuery)
+			udpTest.rawParams)
 		udpconn.SetReadDeadline(time.Now().Add(50 * time.Millisecond))
 
 		numBytes, _, err = udpconn.ReadFromUDP(messageBuf)
